<resources>
    <string name="app_name">Training App</string>
    <string name="add_training">Add training</string>
    <string name="bottom_menu_train">Train</string>
    <string name="bottom_menu_history">History</string>
    <string name="bottom_menu_statistics">Statistics</string>
    <string name="bottom_menu_train_description">Training view</string>
    <string name="bottom_menu_history_description">Training history view</string>
    <string name="bottom_menu_statistics_description">Training statistics view</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="training_title"> %s </string>
    <string name="training_distance">Distance: %.2f km</string>
    <string name="training_start">Start: %s</string>
    <string name="training_end">End: %s</string>
    <string name="training_duration">Duration: %s</string>
    <string name="training_avg">Average speed: %.2f km/s</string>
    <string name="training_calories">%s</string>
    <string name="at_home_training_button">At home training</string>
    <string name="running_training_button">Running training</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_register_message">Don\'t have an account? Register</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_back">Back</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_height">Height</string>
    <string name="distance_each_day">Distance each day</string>
    <string name="hint_change_username">Change Username</string>
    <string name="hint_change_email">Change E-mail</string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_new_password">New password</string>
    <string name="button_update">Update</string>
    <string name="hint_change_height">Change height</string>
    <string name="hint_change_weight">Change weight</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="change_application_appearance">Change Application Appearance</string>
    <string name="modify_account">Modify Account</string>
    <string name="label_sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="create_notification">Create Notification</string>
    <string name="hint_pick_date_message">01.01.21</string>
    <string name="hint_pick_time_message">12:00</string>
    <string name="pick_time_button">Pick Time</string>
    <string name="pick_date_button">Pick Date</string>
    <string name="exercise1">Jumping jacks</string>
    <string name="exercise2">Wall sit</string>
    <string name="exercise3">Push-up</string>
    <string name="exercise4">Abdominal crunch</string>
    <string name="exercise5">Step-up onto chair</string>
    <string name="exercise6">Squat</string>
    <string name="exercise7">Triceps dip on chair</string>
    <string name="exercise8">Plank</string>
    <string name="exercise9">High knees running in place</string>
    <string name="exercise10">Lunge</string>
    <string name="exercise11">Push-up and rotation</string>
    <string name="exercise12">Side plank</string>
    <string name="numberOfExercises">10</string>
    <string name="summary_calories">Calories : \n %s</string>
    <string name="summary_exercisesNumber">Number of exercises : \n %s</string>
    <string name="summary_time">Time : \n %s seconds</string>
    <string name="failed_register">Failed to register</string>
    <string name="failed_login">Failed to login</string>
    <string name="failed_modify">Failed to modify</string>
    <string name="failed_delete">Failed to delete</string>
    <string name="language">PL</string>
    <string name="distance">Distance</string>
    <string name="success">Success</string>
    <string name="notification_delete">Successfully deleted account</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_notification">Time for run!</string>
    <string name="running">RUNNING</string>
    <string name="admin_mess">Message from admin</string>
    <string name="your_bmi">Your BMI</string>
    <string name="logo">Logo</string>
    <string name="next">Next</string>
    <string name="end">End</string>
    <string name="default_date">01.01.2021</string>
    <string name="repeats">Repeats:</string>
    <string name="zero_timer">00:00:00</string>
    <string name="zero_distance">0.0 km</string>
    <string name="zero_cal">0 kcal</string>
    <string name="google_maps_api_key">AIzaSyDY0IPDnMTFyl93cP1_Nj2ynOGp3S9NSNs</string>
</resources>