<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="registerViewModel"
            type="com.trainingapp.viewmodels.RegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            app:layout_constraintBottom_toTopOf="@+id/email_text_input_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            app:layout_constraintBottom_toTopOf="@+id/password_text_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/username_text_input_layout"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:layout_constraintBottom_toBottomOf="@+id/register_button"
            app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/back_button"
            app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            android:text="@string/button_register" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            android:text="@string/button_back"
            android:layout_marginBottom="@dimen/big_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>