<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="registerViewModel"
            type="com.trainingapp.viewmodels.RegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pick_time_message"
            app:layout_constraintBottom_toTopOf="@+id/pick_date_text_input_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/pick_time_button">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pick_time_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/big_margin"
            app:layout_constraintBottom_toTopOf="@+id/pick_date_text_input_layout"
            app:layout_constraintStart_toEndOf="@+id/time_input_layout"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            android:text="@string/pick_time_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/time_input_layout"
            android:layout_marginBottom="@dimen/big_margin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pick_date_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pick_date_message"
            app:layout_constraintBottom_toTopOf="@+id/create_notification_button"
            app:layout_constraintTop_toBottomOf="@+id/time_input_layout"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/pick_date_button">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/message_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pick_date_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/big_margin"
            app:layout_constraintBottom_toTopOf="@+id/create_notification_button"
            app:layout_constraintStart_toEndOf="@+id/pick_date_text_input_layout"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            android:text="@string/pick_date_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/pick_date_text_input_layout"
            android:layout_marginBottom="@dimen/big_margin"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_notification_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_date_text_input_layout"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            android:text="@string/create_notification"
            android:layout_marginBottom="@dimen/big_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>