<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="loginViewModel"
            type="com.trainingapp.viewmodels.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logo_pic"
            android:layout_width="0dp"
            android:layout_height="350dp"
            app:layout_constraintBottom_toTopOf="@+id/username_text_input_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            android:background="@drawable/bieg2"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            app:layout_constraintBottom_toTopOf="@+id/password_text_input"
            app:layout_constraintTop_toBottomOf="@+id/logo_pic"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:layout_constraintBottom_toBottomOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/username_text_input_layout"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/register_button"
                app:layout_constraintTop_toBottomOf="@+id/password_text_input"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                android:text="@string/button_login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintEnd_toEndOf="@+id/guideline_right"
                android:text="@string/button_register_message"
                android:layout_marginBottom="@dimen/big_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>