<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.trainingapp.viewmodels.ModifyAccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weight_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_change_weight"
            app:layout_constraintBottom_toTopOf="@+id/height_text_input_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@{viewModel.weightString}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/height_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_change_height"
            app:layout_constraintBottom_toTopOf="@+id/birthday_text_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/weight_text_input_layout"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/height_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@{viewModel.heightString}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthday_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/change_birthday"
            app:layout_constraintBottom_toTopOf="@+id/sex_text_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/height_text_input_layout"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthday_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@{viewModel.birthday}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sex_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/update_button"
            app:layout_constraintTop_toBottomOf="@+id/birthday_text_input_layout"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right">

            <AutoCompleteTextView
                android:id="@+id/sex_auto_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/change_sex"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/back_button"
            app:layout_constraintTop_toBottomOf="@+id/sex_text_input_layout"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            android:text="@string/button_update"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            app:layout_constraintBottom_toTopOf="@+id/deleteAccountButton"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/update_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteAccountButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            android:text="@string/button_delete_account"
            android:layout_marginBottom="@dimen/big_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>